Bug 120286 - Edit Style should be disabled if Inherit from is disabled or None is selected
Summary: Edit Style should be disabled if Inherit from is disabled or None is selected
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: Styles-Dialog
  Show dependency treegraph
 
Reported: 2018-10-03 14:26 UTC by Xisco Faulí
Modified: 2020-01-13 11:32 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-10-03 14:26:20 UTC
Steps to reproduce:
1. Open Calc
2. Go to Format - Page
3. Go to Organizer tab

-> Edit Style button is enabled while the inherit from dropdown list is disabled.

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 8ea0b0f4dc5eba2d0bafc2e42415ef1824ff604e
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

and

Version: 5.2.0.0.alpha0+
Build ID: 3ca42d8d51174010d5e8a32b96e9b4c0b3730a53
Threads 4; Ver: 4.15; Render: default;
Comment 1 Regina Henschel 2018-10-03 15:17:25 UTC
Clicking on the button does nothing.

The problem is not only in Calc and not only for page styles. But I see it always in case there exists no parent or the parent is "-none-".
Comment 2 Thomas Lendo 2018-10-11 20:47:21 UTC
I also noticed this behavior in every component a few days ago in all formatting dialog windows for styles with the 'Inherit from' drop-down field deactivated or with '– None –' selected.

Changing summary from 'Edit Style in Page format dialog should be disabled if inherit from is disabled' to 'Edit Style should be disabled if Inherit from is disabled or None is selected'.
Comment 3 Jim Raykowski 2019-08-01 20:11:24 UTC
Bugzilla found the same bug already reported while I was filing a report.
Here is a link to a fix:
https://gerrit.libreoffice.org/#/c/76825/
Comment 4 Commit Notification 2019-08-03 18:42:28 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/30c551416d23ff09b8bfe09b69059c052c25c4e6%5E%21

tdf#120286 Disable edit style if inherit from is disabled or None

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.