tdf#120286 Disable edit style if inherit from is disabled or None

Change-Id: Ia08adef09292d330d570a5a931d83317ffa7c3f2
Reviewed-on: https://gerrit.libreoffice.org/76825
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>